# spin-fi-sdk

./: .gitignore  Cargo.toml  README.md
src/: connect_client.rs  connect_wallet.rs  get_balance.rs  get_local_seedphrase.rs  get_market.rs  get_markets.rs  get_order.rs  get_orders.rs  main.rs  post_bid.rs  post_deposit.rs  post_withdraw.rs  sdk.rs  sdk_struct.rs
src/config/: config_client.rs  connect_client.rs  connect_wallet.rs  mod.rs
src/sends/: mod.rs  post_ask.rs  post_bid.rs  post_cancel_all_orders.rs  post_cancel_market_orders.rs  post_cancel_order.rs  post_deposit.rs  post_withdraw.rs
src/utils/: create_tx.rs  mod.rs  send_tx.rs  structs.rs
src/views/: get_balance.rs  get_balances.rs  get_market.rs  get_markets.rs  get_order.rs  get_order_history.rs  get_orders.rs  mod.rs
