cargo-features = ["edition2021"]

[package]
name = "spin-sdk"
version = "0.1.0"
authors = ["DanWizard <tortortorented@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
near-jsonrpc-client = "0.2.0"
near-primitives = "0.11.0"
near-jsonrpc-primitives = "0.11.0"
tokio = { version = "1", features = ["full"] }
serde = "1.0.127"
serde_json = "1.0.66"
borsh = "0.9.1"
near-crypto = "0.11.0"
near-account-id = "0.11.0"